Added points section

--- a/index.html
+++ b/index.html
@@ -24,7 +24,20 @@
                 <div id="9" class="tile bottomMost rightMost"></div>
             </div>
         </div>
-
+        <div id="pointsSection">
+            <div>
+                <p>Player X</p>
+                <p>3</p>
+            </div>
+            <div>
+                <p>Tie</p>
+                <p>3</p>
+            </div>
+            <div>
+                <p>Player O</p>
+                <p>3</p>
+            </div>
+        </div>
         <script type="module" src="modules/main.js" defer></script>
     </body>
   </html>
