Store and Get Points from localStorage

--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
         <div id="pointsSection">
             <div>
                 <p>Player X</p>
-                <p>3</p>
+                <p id="playerXPointsPlaceholder"></p>
             </div>
             <div>
                 <p>Tie</p>
-                <p>3</p>
+                <p id="tiePointsPlaceholder"></p>
             </div>
             <div>
                 <p>Player O</p>
-                <p>3</p>
+                <p id="playerOPointsPlaceholder"></p>
             </div>
         </div>
         <script type="module" src="modules/main.js" defer></script>
