--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
                 <div id="9" class="tile bottomMost rightMost"></div>
             </div>
         </div>
-        <div id="pointsSection">
+        <div id="controls">
+            <div>
+                <button id="resetPointsButton">Reset</button>
+            </div>
             <div>
                 <p>Player X</p>
                 <p id="playerXPointsPlaceholder"></p>
@@ -36,6 +39,9 @@
             <div>
                 <p>Player O</p>
                 <p id="playerOPointsPlaceholder"></p>
+            </div>
+            <div>
+                <button id="toggleUser">SP</button>
             </div>
         </div>
         <script type="module" src="modules/main.js" defer></script>
