Introduced Bot Player

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
         <div id="controls">
             <div>
-                <button id="resetPointsButton">Reset</button>
+                <button id="resetButton">Reset</button>
             </div>
             <div>
                 <p>Player X</p>
@@ -41,9 +41,9 @@
                 <p id="playerOPointsPlaceholder"></p>
             </div>
             <div>
-                <button id="toggleUser">SP</button>
+                <button id="toggleUserButton"></button>
             </div>
         </div>
-        <script type="module" src="modules/main.js" defer></script>
+        <script type="module" src="main.js" defer></script>
     </body>
   </html>
