Fixed LightHouse reports

--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="author" content="Ashish M Bhat">
+        <meta name="description" content="Ashish M Bhat Free online Tic-tac-toe game ">
+        <meta name="keywords" content ="Tic-tac-toe, tictactoe, online, game, singleplayer, multiplayer, bot, points">
+        <meta name="theme-color" content="#FFFFFF">
         <title>
             Tic-Tac-Toe
         </title>
